--- a/day_1/notebooks/Basic_web_scraping.ipynb
+++ b/day_1/notebooks/Basic_web_scraping.ipynb
@@ -22,7 +22,7 @@
     "Jenny Fan - me@jennyfan.com\n",
     "```\n",
     "\n",
-    "A short notebook you can use to get data from HTML\n"
+    "A short notebook you can use to get data from HTML using Requests and Beautiful Soup.\n"
    ]
   },
   {
