--- a/day_2/notebooks/XML_to_CSV.ipynb
+++ b/day_2/notebooks/XML_to_CSV.ipynb
@@ -60,7 +60,9 @@
    "outputs": [],
    "source": [
     "# Loads a \"tree\" representing the XML's hierarchical structure\n",
-    "tree = ET.parse(\"/Users/brianho/Developer/GitHub/mde-preterm-2024/day_2/notebooks/example_data/trace.gpx\")\n",
+    "tree = ET.parse(\n",
+    "    \"/Users/brianho/Developer/GitHub/mde-preterm-2024/day_2/notebooks/example_data/trace.gpx\"\n",
+    ")\n",
     "\n",
     "# Get the singe node at the top-most (or bottom-most, depending how you think of it) part of the tree\n",
     "root = tree.getroot()"
@@ -411,7 +413,9 @@
    ],
    "source": [
     "# Load a geojson with building information, on the same CRS\n",
-    "gdf_buildings = gpd.read_file(\"/Users/brianho/Developer/GitHub/mde-preterm-2024/day_2/notebooks/example_data/buildings.geojson\").to_crs(\"2263\")\n",
+    "gdf_buildings = gpd.read_file(\n",
+    "    \"/Users/brianho/Developer/GitHub/mde-preterm-2024/day_2/notebooks/example_data/buildings.geojson\"\n",
+    ").to_crs(\"2263\")\n",
     "\n",
     "# Plot our trace and buildings\n",
     "ax = gdf_buildings.plot()\n",
